--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26, py27, py33, py34, py35
+envlist = py27, py33, py34, py35, py36, py37
 
 [testenv]
 # fontforge bindings cannot be installed from pip, so they may only be
@@ -11,11 +11,6 @@ deps =
     pytest
 commands = py.test {posargs:scss/tests}
 
-
-[testenv:py26]
-deps =
-    {[testenv]deps}
-    enum34
 
 [testenv:py27]
 deps =
